# spectra-engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
dependencies/: CMakeLists.txt
includes/: Application.h  Context.h  Renderer.h  ShaderModule.h  Utilities.h  error.h
scenes/: SunglassesKhronos.glb
shaders/: triangle.frag  triangle.slang
src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Utilities.h  main.cpp
src/vk/: Context.cpp  Context.h
src/vulkan/: Context.cpp  Context.h  Error.h
